# cimba_python

./: .gitignore  .gitmodules  NOTICE  README.md  main.py  meson.build  meson_options.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  wheels.yml
benchmark/: AMD_Ryzen_7_9700X_WSL.ods  README.md  mm1.py  mm1_multi.py
benchmarks/: AMD_Ryzen_7_9700X_WSL.ods  MM1_multi.py  MM1_single.py
docs/: Doxyfile.in  MISSING_FEATURES.md  background.rst  conf.py  conf.py.in  index.rst  installation.rst  meson.build  missing_features.rst  requirements.txt  tutorial.rst  welcome.rst
docs/about/: c_library.rst  cimba_python.rst  index.rst  license.rst
docs/advanced/: bootstrapping.rst  components.rst  events_timers_signals.rst  index.rst  process_graphs.rst  reporting_logging.rst  structs_spawnables.rst  traces.rst
docs/api/: cimba.rst
docs/api_reference/: core.rst  data.rst  entities.rst  index.rst  logging.rst  models.rst  processes.rst  queues_resources.rst  random.rst  reporting.rst  traces.rst
docs/cimba_intro/: basic_concepts.rst  how_to_proceed.rst  index.rst  installation.rst  process_interaction.rst  shared_resources.rst
docs/concepts/: experiments_results.rst  index.rst  models_trials_env.rst  processes_time.rst  shared_entities.rst
docs/examples/: assembly_line.rst  clocks.rst  index.rst  mm1_queue.rst  resource_server.rst
docs/static/: custom.css  mm1_reporting_five_number.txt  mm1_reporting_report.txt
docs/tools/: generate_reporting_assets.py
docs/topical_guides/: index.rst  monitoring.rst  native_cimba.rst  process_graphs.rst  processes.rst  queues_resources.rst  random.rst  simulations.rst
docs/tutorials/: agents_queues.rst  feature_gaps.rst  gpu_physics.rst  harbor_conditions.rst  index.rst  mm1_queue.rst  resources_interruptions.rst
examples/: demo_cheese.py  demo_harbor.py  demo_mg1_simapi.py  demo_park.py  demo_repairshop.py
examples/benchmarks/: mm1.py  mm1_multi.py  tut_1_7.py
src/cimba/: __init__.py  __init__.pyi  _bindings.py  _cffi_build.py  _cimba.py  _cimba.pyi  _cimba.pyx  _cimba_native.pyx  _components.py  _declarations.py  _graph.py  _intrinsics.py  _model.py  _types.pyi  bootstrap.py  cimba.py  cimba.pyi  cmb_buffer.py  cmb_buffer.pyi  cmb_condition.py  cmb_condition.pyi  cmb_dataset.py  cmb_dataset.pyi  cmb_datasummary.py  cmb_datasummary.pyi  cmb_event.py  cmb_event.pyi  cmb_logger.py  cmb_logger.pyi  cmb_objectqueue.py  cmb_objectqueue.pyi  cmb_priorityqueue.py  cmb_priorityqueue.pyi  cmb_process.py  cmb_process.pyi  cmb_random.py  cmb_random.pyi  cmb_resource.py  cmb_resource.pyi  cmb_resourcepool.py  (+7 more)
src/cimba/_cython/: cimba.pxi  cmb_buffer.pxi  cmb_condition.pxi  cmb_corostate.pxi  cmb_dataset.pxi  cmb_datasummary.pxi  cmb_event.pxi  cmb_experiment.pxi  cmb_logger.pxi  cmb_objectqueue.pxi  cmb_priorityqueue.pxi  cmb_process.pxi  cmb_random.pxi  cmb_resource.pxi  cmb_resourcepool.pxi  cmb_timeseries.pxi  cmb_wtdsummary.pxi
src/cimba/_dataset/: __init__.py  helpers.py  methods.py
src/cimba/_timeseries/: __init__.py  helpers.py  methods.py
src/cimba/bootstrap/: __init__.py  _common.py  _decompose.py  blocks.py  demand.py  model.py  panel.py
src/cimba/native/: nbshim.c  nbshim.h
src/cimba/random/: __init__.py  __init__.pyi  _compiled.py  _lowering.py
src/cimba/store/: __init__.py  helpers.py  methods.py
tests/: test_bootstrap.py  test_buffer.py  test_cimba.py  test_component.py  test_condition.py  test_data.py  test_event.py  test_logger.py  test_native_experiment.py  test_objectqueue.py  test_priorityqueue.py  test_process.py  test_process_dag.py  test_random.py  test_reporting.py  test_resource.py  test_resourcepool.py  test_run_experiment.py  test_smoke.py  test_trace.py  test_validation.py
tests/tutorial/: test_hello.py  test_multi_echelon_inventory.py  test_tut_1_1.py  test_tut_1_2.py  test_tut_1_3.py  test_tut_1_4.py  test_tut_1_5.py  test_tut_1_6.py  test_tut_1_7.py  test_tut_2_1.py  test_tut_3_1.py  test_tut_4_0.py  test_tut_4_1.py  test_tut_4_2.py  test_tut_5_1.py
tutorial/: README.md  __init__.py  _run_example.py  assembly_line.py  hello.py  meson.build  multi_echelon_inventory.py  tut_1_1.py  tut_1_2.py  tut_1_3.py  tut_1_4.py  tut_1_5.py  tut_1_6.py  tut_1_7.py  tut_2_1.py  tut_3_1.py  tut_4_0.py  tut_4_1.py  tut_4_2.py  tut_5_1.py
tutorial/data/multi_echelon_inventory/: README.md
