[build-system]
requires = ["meson-python>=0.16", "cffi>=1.15", "cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "cimba"
version = "0.3.0"
description = "Python bindings for Cimba, a multithreaded discrete-event-simulation C library"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "FBarrca", email = "franbarragan87@gmail.com" }]
keywords = ["simulation", "discrete-event-simulation", "cimba", "numba"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "cffi>=1.15",
    "numpy>=1.20",
    "numba>=0.57",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/FBarrca/cimba_python"
Repository = "https://github.com/FBarrca/cimba_python"
Issues = "https://github.com/FBarrca/cimba_python/issues"
"Upstream C library" = "https://github.com/ambonvik/cimba"

[dependency-groups]
dev = ["pytest>=8"]
# Build tools in the project venv for the no-build-isolation editable install
# below. (build-system.requires covers isolated wheel builds.)
build = ["meson-python>=0.16", "meson>=1.1", "ninja", "cffi>=1.15", "cython>=3.0"]

[tool.uv]
# meson-python editable installs rebuild on import using the tool paths baked
# in at setup time; under build isolation those point into a deleted temp dir.
# Build against the project venv so the recorded paths persist.
no-build-isolation-package = ["cimba"]
default-groups = ["dev", "build"]

[tool.pytest.ini_options]
# Never descend into the vendored C library submodule.
testpaths = ["tests"]
# Native stdout tests capture file descriptors explicitly; Python-level pytest
# capture avoids anonymous temp-file failures on Windows-mounted WSL temp dirs.
addopts = "--capture=sys"

[tool.meson-python.args]
# Compile only our extension (alias in meson.build), skipping upstream's
# tutorials/benchmarks/tests -- one of them links system HDF5.
compile = ["cimba_ext"]
# libcimba is statically linked in; keep subproject install artifacts
# (libcimba.a + upstream headers) out of the wheel.
install = ["--skip-subprojects"]

[tool.cibuildwheel]
# The vendored Cimba C library currently ships x86-64 assembly ports, so we
# publish Linux x86_64 wheels for CPython 3.13 and 3.14.
build = "cp313-manylinux_x86_64 cp314-manylinux_x86_64"
test-requires = "pytest>=8"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "command -v nasm || (dnf install -y nasm || yum install -y nasm || microdnf install -y nasm)"
